logastash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"logstash","namespace":"logging"},"spec":{"replicas":1,"selector":{"matchLabels":{"name":"logstash"}},"template":{"metadata":{"labels":{"name":"logstash"}},"spec":{"containers":[{"command":["logstash"],"image":"logstash:7.8.0","name":"filebeat","ports":[{"containerPort":5044}],"volumeMounts":[{"mountPath":"/usr/share/logstash/pipeline/","name":"logstash-pipeline"}]}],"hostname":"logstash","volumes":[{"configMap [...]
  creationTimestamp: "2023-07-10T19:29:17Z"
  generation: 2
  name: logstash
  namespace: logging
  resourceVersion: "2272540"
  uid: 4a43b41a-def7-4be4-a1a1-503d9d9f21e6
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: logstash
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-07-10T15:38:00-04:00"
      creationTimestamp: null
      labels:
        name: logstash
    spec:
      containers:
      - command:
        - logstash
        image: logstash:7.8.0
        imagePullPolicy: IfNotPresent
        name: filebeat
        ports:
        - containerPort: 5044
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/logstash/pipeline/
          name: logstash-pipeline
      dnsPolicy: ClusterFirst
      hostname: logstash
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: logstash.conf
            path: logstash.conf
          name: logstash-pipeline
        name: logstash-pipeline
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-07-10T19:38:46Z"
    lastUpdateTime: "2023-07-10T19:38:46Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-07-10T19:29:17Z"
    lastUpdateTime: "2023-07-10T19:38:46Z"
    message: ReplicaSet "logstash-6c6b87f9c8" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
