logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: logstash
  template:
    metadata:
      labels:
        name: logstash
    spec:
      hostname: logstash
      containers:
      - name: logstash
        image: logstash:7.8.0
        ports:
        - containerPort: 5044
        name: filebeat
        volumeMounts:
          - name: logstash-pipeline
            mountPath: /usr/share/logstash/pipeline/
        command:
        - logstash
      volumes:
      - name: logstash-pipeline
        configMap:
          name: logstash-pipeline
          items:
            - key: logstash.conf
              path: logstash.conf
